[package]
name = "photomosaic"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25"
clap = { version = "4", features = ["derive"] }
rayon = "1"
indicatif = "0.17"
walkdir = "2"
palette = "0.7"
imagesize = "0.13"
num_cpus = "1.16"
hungarian = "1.0"
serde_json = "1.0"

[[bin]]
name = "photomosaic"
path = "src/main.rs"
